# companies-house

./: .gitignore  README.md  pyproject.toml  settings.toml
src/companies_house/: _typing.py  advanced_search.py  companies_house_api.py  config.py  constants.py  daily_load_to_bq.py  load_sic_codes.py  request_company.py  save_polars_to_bq.py
